joao_figueredo_dr4_at/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chefe-service
spec:
  selector:
    app: chefe-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: receita-service
spec:
  selector:
    app: receita-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
