joao_figueredo_dr4_at/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-chefe
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: chefe-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chefe-service
                port:
                  number: 8080
    - host: receita-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: receita-service
                port:
                  number: 8080
